# large-file-parser

./: .gitignore  large-file-monad-trans-parser.ps  large-file-parser.cabal  parsec-parser-question-stackoverflow.md  second-question-stack-overflow  smart-ddump-simpl  stack.yaml
app/: DumbFileParserMain.hs  FileWriterMain.hs  MonadTransFileParserMain.hs  ScratchFileParser.hs  SmartFileParserMain.hs  StreamingFileParserMain.hs
src/: DumbFileParser.hs  FileWriter.hs  MonadTransFileParser.hs  MyPrelude.hs  ScratchFileParser.hs  SmartFileParser.hs  StreamingFileParser.hs  Types.hs
