name:                large-file-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/large-file-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DumbFileParser
                     , FileWriter
                     , MonadTransFileParser
                     , MyPrelude
                     , ScratchFileParser
                     , StreamingFileParser
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , classy-prelude-conduit
                     , conduit-combinators
                     , conduit-extra
                     , mtl
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  ApplicativeDo
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedLabels
                     , OverloadedLists
                     , OverloadedStrings
                     , PackageImports
                     , PartialTypeSignatures
                     , PatternSynonyms
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable large-file-writer
  hs-source-dirs:      app
  main-is:             FileWriterMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , large-file-parser
  default-language:    Haskell2010

executable large-file-dumb-parser
  hs-source-dirs:      app
  main-is:             DumbFileParserMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , large-file-parser
  default-language:    Haskell2010

executable large-file-streaming-parser
  hs-source-dirs:      app
  main-is:             StreamingFileParserMain.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , large-file-parser
  default-language:    Haskell2010

executable large-file-monad-trans-parser
  hs-source-dirs:      app
  main-is:             MonadTransFileParserMain.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , large-file-parser
  default-language:    Haskell2010

executable large-file-scratch-parser
  hs-source-dirs:      app
  main-is:             ScratchFileParserMain.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , large-file-parser
  default-language:    Haskell2010

test-suite large-file-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , large-file-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/large-file-parser
